// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with heading should match snapshot 1`] = `
<section
  class="Segment__StyledSegment-sc-fjeoot-0 haywxr"
  id="my-heading"
>
  <h2
    class="Heading__StyledHeading-sc-81ovyd-0 vpOqu"
  >
    My heading
  </h2>
  This is some content
</section>
`;

exports[`without heading should match snapshot 1`] = `
<section
  class="Segment__StyledSegment-sc-fjeoot-0 haywxr"
>
  This is some content
</section>
`;
